<resources>
    <string name="letran">LETRAN</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="TODO">TODO</string>
    <string name="grade_and_section">GRADE AND SECTION</string>
    <string name="id_number">ID NUMBER</string>
    <string name="strand">STRAND</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Navigation Drawer</string>
    <string name="open">Open Navigation</string>
    <string name="close">Close Navigation</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="forward"><![CDATA[>]]></string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="feb_2021">Feb 2021</string>
    <string name="grades">GRADES</string>
    <string name="subject_1">SUBJECT 1</string>
    <string name="subject_2">SUBJECT 2</string>
    <string name="subject_3">SUBJECT 3</string>
    <string name="subject_4">SUBJECT 4</string>
    <string name="subject_5">SUBJECT 5</string>
    <string name="subject_6">SUBJECT 6</string>
    <string name="subject_7">SUBJECT 7</string>
    <string name="subject_8">SUBJECT 8</string>
    <string name="subject_9">SUBJECT 9</string>
    <string name="subject_10">SUBJECT 10</string>
    <string name="schedule">SCHEDULE</string>
    <string name="offices_of_the_department">OFFICES OF THE DEPARTMENT</string>
    <string name="open_link">Open Link</string>
    <string name="website">WEBSITE</string>
    <string name="youtube">YOUTUBE</string>
    <string name="facebook">FACEBOOK</string>
    <string name="socials">SOCIALS</string>
    <string name="san_vicente_liem_de_la_paz">SAN VICENTE LIEM DE LA PAZ</string>
    <string name="calendar">Calendar</string>
    <string name="gradess">Grades</string>
    <string name="logout">Logout</string>
    <string name="offices">Offices</string>
    <string name="profile">Profile</string>
    <string name="schedules">Schedule</string>
    <string name="socialss">Socials</string>
    <string name="san_vicente">San Vicente</string>
    <string name="offices_of_the_departments">OFFICES OF THE DEPARTMENT</string>
    <string name="vice_president_for_academics">Vice President for Academics</string>
    <string name="remi">REMI</string>
    <string name="vice_president_for_administration">Vice President for Administration</string>
    <string name="rectors_office">Rectors Office</string>
    <string name="faculty_room_basic_education_and_college">Faculty Room - Basic Education and College</string>
    <string name="program_head">Program Head</string>
    <string name="finance">Finance</string>
    <string name="scholarship_and_research">Scholarship and Research</string>
    <string name="computer_laboratory">Computer Laboratory</string>
    <string name="guidance_office_and_clinic">Guidance Office and Clinic</string>
    <string name="academic_office">Academic Office</string>
    <string name="calendar_of_events">Calendar of Events</string>
    <string name="calendar_event_1">Calendar Event 1</string>
    <string name="calendar_event_2">Calendar Event 2</string>
    <string name="calendar_event_3">Calendar Event 3</string>
    <string name="calendar_event_4">Calendar Event 4</string>
    <string name="calendar_event_5">Calendar Event 5</string>
    <string name="calendar_event_6">Calendar Event 6</string>
    <string name="button">Button</string>
    <string name="add_reminders_for_you">Add Reminders for you</string>
    <string name="rectors_offices">RECTORS OFFICE</string>
    <string name="vice_president_for_academicss">VICE PRESIDENT FOR ACADEMICS</string>
    <string name="research_and_scholarshipp">RESEARCH AND SCHOLARSHIP</string>
    <string name="vice_president_for_remii">VICE PRESIDENT FOR REMI</string>
    <string name="vice_president_for_administrationn">VICE PRESIDENT FOR ADMINISTRATION</string>
    <string name="rev_fr_teodulo_cajugal_op_n_nthe_late_rev_fr_teodulo_cajigal_op_a_spanish_dominican_priest_who_spent_the_best_years_of_his_life_in_manaoag_and_who_chose_to_die_and_be_buried_in_this_rustic_and_quiet_town_used_to_go_around_through_its_small_streets_distributing_candies_and_coins_to_little_children_that_was_his_way_of_showing_great_affection_to_people_of_manaoag_the_people_especially_the_children_loved_him_dearly_in_return_later_the_good_fr_cajigal_decided_to_give_children_more_than_just_the_perishable_candies_and_coins_by_providing_them_something_that_will_last_a_lifetime_and_which_would_make_a_difference_for_their_future_and_that_of_the_town_education_it_was_then_that_the_academy_was_born_nwhere_it_all_began_the_academy_nthe_holy_rosary_academy_of_manaoag_was_founded_in_1947_by_rev_fr_teodulo_cajigal_op_with_the_primary_purpose_of_providing_the_children_of_manaoag_with_catholic_education_this_institution_started_only_as_an_elementary_school_however_when_another_building_was_completed_in_1949_a_complete_high_school_course_offering_was_made_possible_the_government_granted_the_school_official_recognition_in_1951_in_1952_the_first_high_school_commencement_exercises_were_held_nthe_convent_of_the_dominican_fathers_was_initially_located_within_the_school_campus_in_1954_when_a_new_building_was_completed_at_the_opposite_site_of_the_church_the_convent_of_the_dominican_fathers_was_relocated_there_the_vacancy_of_the_former_convent_made_possible_the_segregation_of_the_high_school_boys_and_girls_the_former_remained_in_the_old_high_school_building_while_the_latter_began_to_hold_their_classes_in_the_vacated_building_n_n_both_schools_were_managed_for_a_decade_by_franciscan_sisters_of_the_immaculate_conception_assisted_by_a_staff_of_lay_teachers_the_dominican_fathers_helped_in_the_teaching_of_religion_and_in_the_religious_activities_when_the_contract_with_the_franciscan_sisters_expired_in_1975_the_dominican_daughters_of_the_immaculate_mother_took_over_the_administration_ofthe_school_after_a_year_the_ddim_sisters_adopted_for_the_school_a_non_graded_open_system_of_education_patterned_after_the_angelicum_school_of_quezon_city_another_institution_run_by_the_dominican_fathers_n_nin_1982_the_dominican_fathers_took_over_the_administration_of_the_school_from_the_dominican_daughters_of_the_immaculate_mother_however_due_to_the_growing_demands_of_the_apostolate_of_the_shrine_and_parish_of_our_lady_of_manaoag_the_fathers_entrusted_the_management_of_the_school_to_the_congregation_of_religious_missionaries_of_saint_dominic_the_dominican_missionary_sisters_began_their_stint_in_the_academy_in_1991_n_n">Rev. Fr. Teodulo Cajugal, OP\n\nThe late Rev. Fr. Teodulo Cajigal, OP, a Spanish Dominican priest who spent the best years of his life in Manaoag and who chose to die and be buried in this rustic and quiet town, used to go around through its small streets distributing candies and coins to little children. That was his way of showing great affection to people of Manaoag. The people, especially the children loved him dearly in return. Later, the good Fr. Cajigal decided to give children more than just the perishable candies and coins by providing them something that will last a lifetime and which would make a difference for their future and that of the town: education. It was then that the Academy was born. \nWhere It All Began: The Academy\nThe Holy Rosary Academy of Manaoag was founded in 1947 by Rev. Fr. Teodulo Cajigal, OP with the primary purpose of providing the children of Manaoag with Catholic education. This institution started only as an elementary school. However, when another building was completed in 1949, a complete high school course offering was made possible. The government granted the school official recognition in 1951. In 1952, the first high school commencement exercises were held.\nThe convent of the Dominican Fathers was initially located within the school campus. In 1954, when a new building was completed at the opposite site of the Church, the convent of the Dominican Fathers was relocated there. The vacancy of the former convent made possible the segregation of the high school boys and girls. The former remained in the old high school building while the latter began to hold their classes in the vacated building.\n\n Both schools were managed for a decade by Franciscan Sisters of the Immaculate Conception assisted by a staff of lay teachers. The Dominican Fathers helped in the teaching of religion and in the religious activities. When the contract with the Franciscan Sisters expired in 1975, the Dominican Daughters of the Immaculate Mother took over the Administration Ofthe School. After a year, the DDIM Sisters adopted for the school a non-graded, open system of education patterned after the Angelicum School of Quezon City, another institution run by the Dominican Fathers.\n\nIn 1982, the Dominican Fathers took over the administration of the school from the Dominican Daughters of the Immaculate Mother. However, due to the growing demands of the apostolate of the Shrine and Parish of Our Lady of Manaoag, the Fathers entrusted the management of the school to the Congregation of Religious Missionaries of Saint Dominic. The Dominican Missionary Sisters began their stint in the Academy in 1991.\n\n</string>
    <string name="the_late_rev_fr_teodulo_cajigal_op_a_spanish_dominican_priest_who_spent_the_best_years_of_his_life_in_manaoag_and_who_chose_to_die_and_be_buried_in_this_rustic_and_quiet_town_used_to_go_around_through_its_small_streets_distributing_candies_and_coins_to_little_children_that_was_his_way_of_showing_great_affection_to_people_of_manaoag_the_people_especially_the_children_loved_him_dearly_in_return_later_the_good_fr_cajigal_decided_to_give_children_more_than_just_the_perishable_candies_and_coins_by_providing_them_something_that_will_last_a_lifetime_and_which_would_make_a_difference_for_their_future_and_that_of_the_town_education_it_was_then_that_the_academy_was_born">The late Rev. Fr. Teodulo Cajigal, OP, a Spanish Dominican priest who spent the best years of his life in Manaoag and who chose to die and be buried in this rustic and quiet town, used to go around through its small streets distributing candies and coins to little children. That was his way of showing great affection to people of Manaoag. The people, especially the children loved him dearly in return. Later, the good Fr. Cajigal decided to give children more than just the perishable candies and coins by providing them something that will last a lifetime and which would make a difference for their future and that of the town: education. It was then that the Academy was born.</string>
    <string name="colegio_de_san_juan_de_letran_manaoagsss">Colegio de San Juan de Letran - Manaoag</string>
    <string name="school_years">School Year</string>
    <string name="student_names">Student Name</string>
    <string name="namess">Name</string>
    <string name="sgrade_and_section">Grade and Section</string>
    <string name="id_numberss">ID Number</string>
    <string name="grade_and_sectionss">Grade and Section</string>
    <string name="sss">-----------</string>
    <string name="sssstandss">Strand</string>
    <string name="strandssss">Strand</string>
</resources>